docs: update documentation

--- a/packages/core/test/mock-dist/index.html
+++ b/packages/core/test/mock-dist/index.html
@@ -43,6 +43,7 @@
 						</p>
 
 						<p>
+							<!-- Class attribute should be preserved -->
 							<span data-icon="feather:edit" class="preserved"></span>
 							<span
 								data-icon="https://api.some-other-service.com"
